--- a/src/main/resources/com/example/teszt/hello-view.fxml
+++ b/src/main/resources/com/example/teszt/hello-view.fxml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.teszt.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="520.0" prefWidth="797.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.2" fx:controller="com.example.teszt.HelloController">
+   <MenuBar fx:id="menu" maxWidth="1.7976931348623157E308" prefHeight="22.0" prefWidth="790.0">
+     <menus>
+       <Menu mnemonicParsing="false" text="Bejelentkezés">
+         <items>
+           <MenuItem mnemonicParsing="false" text="sda" />
+         </items>
+       </Menu>
+       <Menu mnemonicParsing="false" text="Edit">
+         <items>
+           <MenuItem mnemonicParsing="false" text="Delete" />
+         </items>
+       </Menu>
+       <Menu mnemonicParsing="false" text="Help">
+         <items>
+           <MenuItem mnemonicParsing="false" text="About" />
+         </items>
+       </Menu>
+     </menus>
+   </MenuBar>
+   <TextField fx:id="search" alignment="CENTER" promptText="Keresés" />
+   <Button fx:id="button" alignment="TOP_CENTER" mnemonicParsing="false" text="Told neki">
+      <VBox.margin>
+         <Insets />
+      </VBox.margin>
+   </Button>
 </VBox>
